C H A N G E S

CasparCG 2.1.13 NRK (w.r.t 2.1.12 NRK)
==========================================

  o Backport TBB update 

CasparCG 2.1.12 NRK (w.r.t 2.1.11 NRK)
==========================================

  o Fix for flash player urls after EOL. More details: #47

CasparCG 2.1.11 NRK (w.r.t 2.1.10 NRK)
==========================================

  o Text masks for PSD producer and various fixes. More details: #21 (Sponsored by didikunz and Media Support)

  o Upgrade CEF to Chromium71 and improve gpu acceleration performance (disabled by default)

  o Fix WIPE transition directions

  o Allow query and fragment to be used with local html templates

  o Add CLEAR ALL commad to clear all channels

  o Fix bad counter causing crash after removing 8 consumers

CasparCG 2.1.10 NRK (w.r.t 2.1.9 NRK)
==========================================

  o Fix invalid OpenGL call causing crash at startup on non-Nvidia GPU

CasparCG 2.1.9 NRK (w.r.t 2.1.8 NRK)
==========================================

  o Add some mixer and tween properties to OSC

  o Add individual layer audio levels to OSC
  
  o Add producer type and channel layout to OSC

  o Add improved parameter syntax to STING transitions
  
  o Add audio fade properties to STING transitions
  
  o Add audio fade properties to STING transitions
  
  o Add log lines if an portion of the channel tick takes too long (mixer/producers/consumers)
  
  o Backport some opengl performance improvements
  
  o Add config structure to preallocate opengl buffers at startup
  
  o Initial support for running channels at custom resolutions
  
  o Add support for a LOAD without parameters, to move the background producer into the foreground as paused

  o Add CLEAR_ON_404 parameter to LOAD/LOADBG/PLAY, to use an empty producer if the original command 404 errors

CasparCG 2.1.8 NRK (w.r.t 2.1.7 NRK)
==========================================

  o Fix memory leak in decklink outputs

CasparCG 2.1.7 NRK (w.r.t 2.1.6 NRK)