@@ -26,7 +26,7 @@ struct accelerator::impl
 	{
 	}
 
-	std::unique_ptr<core::image_mixer> create_image_mixer(const int channel_id)
+	spl::unique_ptr<core::image_mixer> create_image_mixer(const int channel_id)
 	{
 		try
 		{
@@ -37,7 +37,7 @@ struct accelerator::impl
 				if(!ogl_device_)
 					ogl_device_.reset(new ogl::device());
 
-				return std::make_unique<ogl::image_mixer>(
+				return spl::make_unique<ogl::image_mixer>(
 						spl::make_shared_ptr(ogl_device_),
 						env::properties().get(L"configuration.mixer.blend-modes", false),
 						env::properties().get(L"configuration.mixer.straight-alpha", false),
@@ -50,7 +50,7 @@ struct accelerator::impl
 			if(path_ == L"gpu" || path_ == L"ogl")
 				CASPAR_LOG_CURRENT_EXCEPTION();
 		}
-		return std::make_unique<cpu::image_mixer>(channel_id);
+		return spl::make_unique<cpu::image_mixer>(channel_id);
 	}
 };
 
@@ -63,7 +63,7 @@ accelerator::~accelerator()
 {
 }
 
-std::unique_ptr<core::image_mixer> accelerator::create_image_mixer(const int channel_id)
+spl::unique_ptr<core::image_mixer> accelerator::create_image_mixer(const int channel_id)
 {
 	return impl_->create_image_mixer(channel_id);
 }
