@@ -128,29 +128,13 @@ if (MSVC)
 	)
 else ()
 	target_link_libraries(common
-		boost_system
-		boost_thread
-		boost_chrono
-		boost_filesystem
-		boost_log
-		boost_locale
-		boost_regex
-		boost_date_time
-		tbb
-		tbbmalloc
-		tbbmalloc_proxy
-		sfml-graphics-s
-		sfml-window-s
-		sfml-system-s
-		GLEW
-		GL
-		X11
-		jpeg
-		sndfile
-		freetype
-		udev
-		Xrandr
-		pthread
+		${Boost_LIBRARIES}
+		${TBB_LIBRARIES}
+		${SFML_LIBRARIES}
+		${GLEW_LIBRARIES}
+		${FREETYPE_LIBRARIES}
+		${ICU_LIBRARIES}
+		-lX11
 	)
 endif ()
 
@@ -164,9 +148,4 @@ if(MSVC)
 	# casparcg_add_runtime_dependency("${TBB_BIN_PATH}/tbbmalloc_debug.dll")
 	# casparcg_add_runtime_dependency("${TBB_BIN_PATH}/tbbmalloc_proxy.dll")
 	# casparcg_add_runtime_dependency("${TBB_BIN_PATH}/tbbmalloc_proxy_debug.dll")
-else()
-	casparcg_add_runtime_dependency("${GLEW_BIN_PATH}/libGLEW.so.1.12")
-	casparcg_add_runtime_dependency("${TBB_BIN_PATH}/libtbb.so.2")
-	casparcg_add_runtime_dependency("${TBB_BIN_PATH}/libtbbmalloc_proxy.so.2")
-	casparcg_add_runtime_dependency("${TBB_BIN_PATH}/libtbbmalloc.so.2")
 endif()
