@@ -100,7 +100,7 @@ public:
 			int height,
 			const video_format_repository& format_repository,
 			const video_format_desc& render_video_mode,
-			std::unique_ptr<image_mixer> image_mixer,
+			spl::unique_ptr<image_mixer> image_mixer,
 			int generate_delay_millis,
 			const thumbnail_creator& thumbnail_creator,
 			spl::shared_ptr<media_info_repository> media_info_repo,
@@ -333,7 +333,7 @@ thumbnail_generator::thumbnail_generator(
 		int height,
 		const video_format_repository& format_repository,
 		const video_format_desc& render_video_mode,
-		std::unique_ptr<image_mixer> image_mixer,
+		spl::unique_ptr<image_mixer> image_mixer,
 		int generate_delay_millis,
 		const thumbnail_creator& thumbnail_creator,
 		spl::shared_ptr<media_info_repository> media_info_repo,
