@@ -86,5 +86,4 @@ if(MSVC)
 else()
 	casparcg_add_runtime_dependency("${CEF_BIN_PATH}/chrome-sandbox")
 	casparcg_add_runtime_dependency("${CEF_BIN_PATH}/libcef.so")
-	casparcg_add_runtime_dependency("${CEF_BIN_PATH}/libwidevinecdmadapter.so")
 endif()
