@@ -27,16 +27,18 @@ source_group(sources ./*)
 
 if(MSVC)
 	target_link_libraries(oal
-			common
-			core
+		common
+		core
 
-			OpenAL32)
+		OpenAL32
+	)
 else()
 	target_link_libraries(oal
-			common
-			core
+		common
+		core
 
-			openal)
+		${OPENAL_LIBRARIES}
+	)
 endif()
 
 casparcg_add_include_statement("modules/oal/oal.h")
@@ -45,7 +47,5 @@ casparcg_add_module_project("oal")
 
 if(MSVC)
 	casparcg_add_runtime_dependency("${OPENAL_BIN_PATH}/OpenAL32.dll")
-else()
-	casparcg_add_runtime_dependency("${OPENAL_BIN_PATH}/libopenal.so.1")
 endif()
 
