@@ -22,6 +22,7 @@
 
 #pragma once
 
+#include <boost/asio/io_service.hpp>
 #include <boost/asio/ip/udp.hpp>
 #include <boost/noncopyable.hpp>
 
